Avoid build errors, double-check validation of fragments.